Bug 17549 - Mobile: new maintenance screens display text shifted down

--- a/skins/weborder_mobile/css/maintenance.css
+++ b/skins/weborder_mobile/css/maintenance.css
@@ -2,7 +2,6 @@
 
 #content .maintenance {
     height: 100%;
-    position: absolute;
     text-align: center;
     width: 100%;
 }
